<resources>
    <string name="app_name">Vaiyo</string>

    <string name="utils_copy_text">Text copied</string>

    <string name="fragment_login_please_connect_your_wallet">Please connect your wallet</string>
    <string name="fragment_login_sign_up">Sign Up</string>
    <string name="fragment_login_btn_signIn_wallet">Sign in using wallet</string>
    <string name="fragment_login_btn_sign_in">Sign in</string>
    <string name="fragment_login_disconnect">Disconnect</string>
    <string name="fragment_login_wc_approve_error">Can not get wallet info</string>
    <string name="fragment_login_success_login">welcome</string>
    <string name="fragment_login_forget_pass">Forget password?</string>


    <string name="register_fragment_title">Sign up</string>
    <string name="register_fragment_btn_sign_up">Sign up</string>
    <string name="register_fragment_btn_skip">Skip</string>
    <string name="register_fragment_btn_signup_wallet">Sign up using wallet</string>
    <string name="register_fragment_sub_title">Fill the following details to get started</string>
    <string name="register_fragment_edt_enter_your_full_name">Enter your Full Name</string>
    <string name="register_fragment_edt_enter_your_email">Enter your Email</string>
    <string name="register_fragment_edt_enter_your_affiliate">Enter your affiliate code</string>
    <string name="register_fragment_edt_create_password">Create a password</string>
    <string name="register_fragment_edt_confirm_password">Confirm password</string>

    <string name="dialog_fragment_complete_wallet_btn_connect">Connect wallet</string>

    <string name="dialog_fragment_complete_profile_btn_add">Add</string>
    <string name="dialog_fragment_complete_profile_title">Additional details</string>

    <string name="invalid_username">Username should start with letters.\nUsername must be at least 8 letters.\nUsername should only contains letters and numbers.\nNo special chars.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_room_name">Invalid room name</string>
    <string name="invalid_mobile">Invalid mobile</string>
    <string name="invalid_contact_name">Invalid contact name</string>
    <string name="invalid_wallet_number">Invalid wallet address</string>
    <string name="invalid_code">Invalid code</string>
    <string name="invalid_password">Password should at least contains 8 characters</string>
    <string name="invalid_password_repeat">Repeat password not match</string>
    <string name="invalid_local_password">Invalid password! try again</string>
    <string name="error_empty_input">This field is required</string>

    <string name="confirm">Confirm</string>
    <string name="clear">clear</string>
    <string name="cancel">Cancel</string>

    <string name="create_room_fragment_room_name">Room name</string>

    <string name="join_room_fragment_title">You have been invited to join</string>
    <string name="join_room_fragment_edt_enter_user_name">Enter your username</string>
    <string name="join_room_fragment_btn_join">Join</string>

    <string name="join_menu_item_start_poll">Start a poll</string>
    <string name="join_menu_item_upload_presentation">Upload a presentation</string>
    <string name="join_menu_item_share_external_video">Share an external video</string>

    <string name="activity_room_list_last_session">Last Session: %s</string>
    <string name="activity_room_list_participants">%s Participants</string>
    <string name="activity_room_list_recording">%s Recording</string>
    <string name="activity_room_list_title_recordings">Recordings</string>
    <string name="activity_room_list_title_participants">Participants</string>
    <string name="activity_room_list_title_room_link">Room Link</string>
    <string name="activity_room_list_not_participates">There are no participates yet.</string>

    <string name="dialog_room_list_menu_recording">Recordings</string>
    <string name="dialog_room_list_menu_delete">Delete</string>
    <string name="dialog_room_list_menu_delete_confirm_title">Delete room</string>
    <string name="dialog_room_list_menu_delete_confirm_message">Do you want to delete this room?</string>
    <string name="dialog_room_list_menu_delete_btn_delete">delete</string>
    <string name="dialog_room_list_menu_delete_btn_cancel">Cancel</string>

    <string name="activity_recording_delete_title">delete file</string>
    <string name="activity_recording_delete_message">Do you want to delete this file?</string>
    <string name="activity_recording_delete_btn_delete">delete</string>
    <string name="activity_recording_delete_btn_cancel">Cancel</string>

    <string name="item_recording_list_participate">Recording date: %s</string>

    <string name="dialog_create_room_title">Create New Room</string>
    <string name="dialog_create_room_btn_create">Create room</string>
    <string name="dialog_create_room_mute_users_when_join">Mute users when they join</string>
    <string name="dialog_create_room_require_moderator_approval">Require moderator approval before joining</string>
    <string name="dialog_create_room_allow_any_user_start_meeting">Allow any user to start this meeting</string>
    <string name="dialog_create_room_all_users_join_as_moderator">All users join as moderators</string>
    <string name="dialog_create_room_automatically_join_me_into_the_room">Automatically join me into the room</string>
</resources>