<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/screen_spacing">

        <TextView
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_create_room_title"
            android:textAppearance="@style/textAppearance.size16" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xxlarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_room_name"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/create_room_fragment_room_name"
                android:textAlignment="inherit" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_mute_on_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dialog_create_room_mute_users_when_join"
            app:switchPadding="@dimen/spacing_large" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_require_moderator_approval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dialog_create_room_require_moderator_approval"
            app:switchPadding="@dimen/spacing_large" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_anyone_can_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dialog_create_room_allow_any_user_start_meeting"
            app:switchPadding="@dimen/spacing_large" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_all_join_moderator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dialog_create_room_all_users_join_as_moderator"
            app:switchPadding="@dimen/spacing_large" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dialog_create_room_automatically_join_me_into_the_room"
            app:switchPadding="@dimen/spacing_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateMeeting"
            style="@style/button.primary"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/dialog_create_room_btn_create" />
    </LinearLayout>
</layout>