<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widgetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical">

    <io.vaiyo.presentation.view.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_show_back="true"
        app:tv_title="@string/fragment_login_sign_up" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/screen_spacing">


        <TextView
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_login_please_connect_your_wallet"
            android:textAppearance="@style/textAppearance.size14" />

        <TextView
            android:id="@+id/txt_wallet_address"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:textAppearance="@style/textAppearance.size14"
            android:visibility="gone" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_email"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/register_fragment_edt_enter_your_email"
                android:inputType="text"
                android:textAlignment="inherit" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/register_fragment_edt_create_password"
                android:inputType="textPassword"
                android:textAlignment="inherit" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForgetPass"
            style="@style/button.buttonText"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_forget_pass" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            style="@style/button.primary"
            android:layout_marginTop="@dimen/spacing_huge"
            android:text="@string/fragment_login_btn_sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConnect"
            style="@style/button.buttonOutlined"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/fragment_login_btn_signIn_wallet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDisconnect"
            style="@style/button.buttonOutlined"
            android:layout_marginTop="@dimen/spacing_huge"
            android:text="@string/fragment_login_disconnect"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>

