<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widgetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <io.vaiyo.presentation.view.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Sign Up"
        app:tv_show_back="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/screen_spacing">


        <TextView
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_fragment_sub_title"
            android:textAppearance="@style/textAppearance.size14" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_email"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/register_fragment_edt_enter_your_full_name"
                android:textAlignment="inherit" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_username"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/register_fragment_edt_enter_your_email"
                android:inputType="text"
                android:textAlignment="inherit" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/register_fragment_edt_create_password"
                android:inputType="textPassword"
                android:textAlignment="inherit" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/register_fragment_edt_confirm_password"
                android:inputType="textPassword"
                android:textAlignment="inherit" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_affiliate"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/register_fragment_edt_enter_your_affiliate"
                android:inputType="text"
                android:textAlignment="inherit" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/button.primary"
            android:layout_marginTop="@dimen/spacing_huge"
            android:text="@string/register_fragment_btn_sign_up" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConnect"
            style="@style/button.buttonOutlined"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/register_fragment_btn_signup_wallet" />
    </LinearLayout>
</LinearLayout>

